--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
-<html lang="es-419">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encontrando Mascotas</title>
+    <title>Página de Inicio</title>
+    <link rel="stylesheet" href="./static/css/style.css">
 </head>
-
 <body>
-    <header>
-        <nav>
-            <a href="Inicio"></a>
-            <a href="/templates/contact.html">Contacto</a>
-            <a href="/templates/lost_pets.html">Mascotas Perdidas</a>
-            <a href="/templates/pets_found.html">Mascotas Encontradas</a>
-        </nav>
-    </header>
+    <header id="header"></header>
     <main>
-
+        <h1>Bienvenido a nuestra página</h1>
+        <p>Esta es la página de inicio de nuestro sitio web.</p>
     </main>
     <footer>
-
+        <p>&copy; 2024 Nuestro Sitio Web</p>
     </footer>
+    <script type="module" src="./main.js"></script>
 </body>
-
 </html>
